# ai-predictions

./: .env.example  .gitignore  AB_TEST_RESULTS_SUMMARY.md  DATASET_ENHANCEMENT_STATUS.md  ENHANCED_MODEL_LEARNING_RESULTS.md  ENHANCED_ULTRA80_IMPLEMENTATION.md  ENHANCED_WORKFLOW_COMPLETE.md  HandyCommands.md  IMPROVEMENT_ACTION_PLAN.md  INCREMENTAL_LEARNING_CONFIG.md  LEARNING_INTEGRATION_GUIDE.md  LEARNING_LOOP_COMPLETE.md  LIVE_GAME_FILTERING_COMPLETE.md  MLB_DEPLOYMENT_TEST_RESULTS.md  MLB_TRACKING_INTEGRATION_SUMMARY.md  MLB_TRACKING_ORGANIZATION_SUMMARY.md  PERFORMANCE_CRISIS_ACTION_PLAN.md  PIPELINE_STATUS_FIXED.md  README.md  RECENCY_MATCHUP_IMPLEMENTATION.md  SYSTEM_ANALYSIS.md  ULTRA80_PERFORMANCE_TUNING.md  ab_test_results_report.txt  add_bullpen_columns.py  advanced_feature_fixes.py  analyze_30_day_bias.py  analyze_enhanced_results.py  analyze_feature_mismatch.py  analyze_features.py  analyze_todays_performance.py  backfill_progress.py  bash.exe.stackdump  bootstrap_ultra80.bat  check_columns.py  check_data_quality.py  check_dates.py  check_historical_data.py  check_holds.py  check_postgres_predictions.py  check_predictions.py  (+105 more)
archive_unused/: MODEL_TRAINING_COMPLETE.md  Makefile  SYSTEM_ANALYSIS.md  debug_api_predictions.py  enhanced_gameday.ps1  enhanced_games_api.py  enhanced_ml_api.py  enhanced_predictions_api.py  pyproject.toml
archive_unused/scripts/: build_training_features.py  collect_historical_data.py  comprehensive_daily_pipeline.py  comprehensive_era_test.py  comprehensive_era_test_fixed.py  comprehensive_prediction_tracker.py  (+14 more)
mlb/: README.md
(+803 files in other folders)
