[project]
name = "ai-predictions"
version = "0.1.0"
description = "Local-first MLB totals prediction pipeline"
authors = [{name="Your Name"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "httpx>=0.27",
  "pydantic>=2.6",
  "tenacity>=8.2",
  "python-dotenv>=1.0",
  "apscheduler>=3.10",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29"
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.setuptools.packages.find]
include = ["app*", "mlb-overs*", "mlb_overs*"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
